Reworked planning.